--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "babel-preset-es2015-native-modules": "^6.9.4",
+    "express": "^4.16.2",
     "pre-commit": "^1.2.2"
   },
   "homepage": "https://github.com/everettanthony/flexbox-playground",
